Update layout and add background video
Update grid with rows and columns. Create resources folder and add default background video.

--- a/GameLauncher.csproj
+++ b/GameLauncher.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="Model\" />
+    <Folder Include="Resources\" />
     <Folder Include="ViewModel\" />
   </ItemGroup>
 
