--- a/GameLauncher.csproj
+++ b/GameLauncher.csproj
@@ -11,6 +11,8 @@
     <None Remove=".gitattributes" />
     <None Remove=".gitignore" />
     <None Remove="LICENSE.txt" />
+    <None Remove="Resources\Decoy.jpg" />
+    <None Remove="Resources\Jhin.mp4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,8 +25,16 @@
 
   <ItemGroup>
     <Folder Include="Model\" />
-    <Folder Include="Resources\" />
     <Folder Include="ViewModel\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\Decoy.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Jhin.mp4">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
