--- a/GameLauncher.csproj
+++ b/GameLauncher.csproj
@@ -11,8 +11,10 @@
     <None Remove=".gitattributes" />
     <None Remove=".gitignore" />
     <None Remove="LICENSE.txt" />
-    <None Remove="Resources\Decoy.jpg" />
-    <None Remove="Resources\Jhin.mp4" />
+    <None Remove="Resources\1.0.0.mp4" />
+    <None Remove="Versions\1.0.0.txt" />
+    <None Remove="Versions\1.0.1.txt" />
+    <None Remove="Versions\2.0.0.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,10 +26,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Resources\Decoy.jpg">
+    <Content Include="Resources\1.0.0.mp4">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\Jhin.mp4">
+    <Content Include="Versions\1.0.0.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Versions\1.0.1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Versions\2.0.0.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
